add String Search feature

--- a/ressources/styles/homepage.scss
+++ b/ressources/styles/homepage.scss
@@ -6,3 +6,9 @@
     margin-right: auto;
     margin-bottom: 20px;
 }
+
+.gallery {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
