--- a/ressources/styles/style.css
+++ b/ressources/styles/style.css
@@ -7,4 +7,70 @@
   margin-bottom: 20px;
 }
 
+.gallery {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.card {
+  border-radius: 5px;
+  max-width: 400px;
+  max-height: 364px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 5px;
+  margin-bottom: 30px;
+  background: #E7E7E7;
+  text-overflow: ellipsis;
+}
+.card__img {
+  width: 100%;
+  height: 178px;
+  background-color: grey;
+}
+.card__title {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  font-size: 1.1rem;
+  height: 32px;
+}
+.card__title__text {
+  margin-right: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  max-width: 280px;
+}
+.card__title__icon {
+  margin-right: 5px;
+}
+.card__list {
+  display: flex;
+  flex-direction: column;
+  margin: 5px;
+  width: 45%;
+  font-size: 0.8rem;
+  max-height: 140px;
+  display: -webkit-box;
+  -webkit-line-clamp: 7;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+.card__desc {
+  margin: 5px;
+  width: calc(45%);
+  font-size: 0.8rem;
+  max-height: 140px;
+  display: -webkit-box;
+  -webkit-line-clamp: 7;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+p {
+  margin: 0;
+}
+
 /*# sourceMappingURL=style.css.map */
