--- a/ressources/styles/style.css
+++ b/ressources/styles/style.css
@@ -13,6 +13,88 @@
   flex-wrap: wrap;
 }
 
+.searchbar {
+  height: 58px;
+  margin-left: 80px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.searchbar__input {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  width: 90%;
+  border: none;
+  height: 100%;
+  background-color: #E7E7E7;
+  font-size: large;
+  font-weight: bold;
+  padding-left: 20px;
+}
+.searchbar__button {
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  border: none;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  font-size: 2rem;
+  background-color: #E7E7E7;
+  cursor: pointer;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  padding: 0.375rem 0.75rem;
+}
+
+.filter {
+  position: relative;
+  padding: 10px;
+  margin: 10px;
+  margin-left: 0px;
+  border-radius: 5px;
+  height: 50px;
+}
+.filter-section {
+  display: flex;
+}
+.filter--blue {
+  background-color: #3282F7;
+  color: white;
+  border: none;
+}
+.filter--green {
+  background-color: #68D9A4;
+  color: white;
+  border: none;
+}
+.filter--orange {
+  background-color: #ED6454;
+  color: white;
+  border: none;
+}
+
+.dropdown {
+  border-radius: 5px;
+  background-color: inherit;
+  display: none;
+  flex-direction: column;
+  flex-wrap: wrap;
+  padding: 5px;
+  position: absolute;
+  top: 45px;
+  left: 0px;
+  width: 100%;
+  max-height: 400px;
+  z-index: 8;
+}
+.dropdown__text {
+  margin: 5px;
+}
+
 .card {
   border-radius: 5px;
   max-width: 400px;
