--- a/ressources/styles/reset.scss
+++ b/ressources/styles/reset.scss
@@ -1,3 +1,17 @@
-p {
-    margin: 0;
-}
+    p {
+        margin: 0;
+    }
+    
+    body {
+        padding: 100px;
+        @media only screen and (min-width: 320px) and (max-width: 425px) {
+            padding: 0;
+        }
+        @media only screen and (min-width: 425px) and (max-width: 1023px) {
+            margin-left: 30px;
+        }
+    }
+    
+     ::placeholder {
+        color: white;
+    }
