--- a/ressources/styles/style.css
+++ b/ressources/styles/style.css
@@ -7,10 +7,38 @@
   margin-bottom: 20px;
 }
 
+.tag {
+  min-width: 107px;
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
+  margin-right: 10px;
+}
+.tag--blue {
+  background-color: #3282F7;
+}
+.tag--green {
+  background-color: #68D9A4;
+}
+.tag--orange {
+  background-color: #ED6454;
+}
+
 .gallery {
   display: flex;
-  justify-content: space-around;
   flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 50px;
+}
+
+.badgeContainer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.badgeButton {
+  margin-left: 5px;
+  cursor: pointer;
 }
 
 .searchbar {
@@ -20,6 +48,11 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
+}
+@media only screen and (min-width: 320px) and (max-width: 425px) {
+  .searchbar {
+    margin: 0%;
+  }
 }
 .searchbar__input {
   border-top-left-radius: 5px;
@@ -49,6 +82,9 @@
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   padding: 0.375rem 0.75rem;
 }
+.searchbar ::placeholder {
+  color: black;
+}
 
 .filter {
   position: relative;
@@ -60,6 +96,12 @@
 }
 .filter-section {
   display: flex;
+  margin-left: 13%;
+}
+@media only screen and (min-width: 320px) and (max-width: 425px) {
+  .filter-section {
+    display: inline-table;
+  }
 }
 .filter--blue {
   background-color: #3282F7;
@@ -91,8 +133,9 @@
   max-height: 400px;
   z-index: 8;
 }
-.dropdown__text {
-  margin: 5px;
+.dropdown__item {
+  margin-left: 5px;
+  margin-bottom: 3px;
 }
 
 .card {
@@ -153,6 +196,24 @@
 
 p {
   margin: 0;
+}
+
+body {
+  padding: 100px;
+}
+@media only screen and (min-width: 320px) and (max-width: 425px) {
+  body {
+    padding: 0;
+  }
+}
+@media only screen and (min-width: 425px) and (max-width: 1023px) {
+  body {
+    margin-left: 30px;
+  }
+}
+
+::placeholder {
+  color: white;
 }
 
 /*# sourceMappingURL=style.css.map */
