--- a/ressources/styles/homepage.scss
+++ b/ressources/styles/homepage.scss
@@ -7,8 +7,36 @@
     margin-bottom: 20px;
 }
 
+.tag {
+    min-width: 107px;
+    display: flex;
+    justify-content: space-between;
+    padding: 15px;
+    margin-right: 10px;
+    &--blue {
+        background-color: #3282F7;
+    }
+    &--green {
+        background-color: #68D9A4;
+    }
+    &--orange {
+        background-color: #ED6454;
+    }
+}
+
 .gallery {
     display: flex;
-    justify-content: space-around;
     flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+
+.badgeContainer {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.badgeButton {
+    margin-left: 5px;
+    cursor: pointer;
 }
