--- a/ressources/styles/input.scss
+++ b/ressources/styles/input.scss
@@ -5,6 +5,9 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    @media only screen and (min-width: 320px) and (max-width: 425px) {
+        margin: 0%;
+    }
     &__input {
         border-top-left-radius: 5px;
         border-bottom-left-radius: 5px;
@@ -72,10 +75,11 @@
     position: absolute;
     top: 45px;
     left: 0px;
-    width: 100%;
     max-height: 400px;
     z-index: 8;
-    &__text {
+    align-content: flex-start;
+    &__item {
+        cursor: pointer;
         margin: 5px
     }
 }
