--- a/ressources/styles/style.css
+++ b/ressources/styles/style.css
@@ -7,10 +7,38 @@
   margin-bottom: 20px;
 }
 
+.tag {
+  min-width: 107px;
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
+  margin-right: 10px;
+}
+.tag--blue {
+  background-color: #3282F7;
+}
+.tag--green {
+  background-color: #68D9A4;
+}
+.tag--orange {
+  background-color: #ED6454;
+}
+
 .gallery {
   display: flex;
-  justify-content: space-around;
   flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 50px;
+}
+
+.badgeContainer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.badgeButton {
+  margin-left: 5px;
+  cursor: pointer;
 }
 
 .searchbar {
@@ -20,6 +48,11 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
+}
+@media only screen and (min-width: 320px) and (max-width: 425px) {
+  .searchbar {
+    margin: 0%;
+  }
 }
 .searchbar__input {
   border-top-left-radius: 5px;
@@ -87,11 +120,12 @@
   position: absolute;
   top: 45px;
   left: 0px;
-  width: 100%;
   max-height: 400px;
   z-index: 8;
+  align-content: flex-start;
 }
-.dropdown__text {
+.dropdown__item {
+  cursor: pointer;
   margin: 5px;
 }
 
