--- a/ressources/styles/homepage.scss
+++ b/ressources/styles/homepage.scss
@@ -15,12 +15,15 @@
     margin-right: 10px;
     &--blue {
         background-color: #3282F7;
+        color: #ffff;
     }
     &--green {
         background-color: #68D9A4;
+        color: #ffff;
     }
     &--orange {
         background-color: #ED6454;
+        color: #ffff;
     }
 }
 
