--- a/ressources/styles/homepage.scss
+++ b/ressources/styles/homepage.scss
@@ -1,42 +1,51 @@
-    .logo {
-        object-fit: scale-down;
-        width: 268px;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 20px;
+.logo {
+    object-fit: scale-down;
+    width: 268px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+}
+
+.tag {
+    min-width: 107px;
+    display: flex;
+    justify-content: space-between;
+    padding: 15px;
+    margin-right: 10px;
+    &--blue {
+        background-color: #3282F7;
+        color: #ffff;
     }
-    
-    .tag {
-        min-width: 107px;
-        display: flex;
-        justify-content: space-between;
-        padding: 15px;
-        margin-right: 10px;
-        &--blue {
-            background-color: #3282F7;
-        }
-        &--green {
-            background-color: #68D9A4;
-        }
-        &--orange {
-            background-color: #ED6454;
-        }
+    &--green {
+        background-color: #68D9A4;
+        color: #ffff;
     }
-    
-    .gallery {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        margin-top: 50px;
+    &--orange {
+        background-color: #ED6454;
+        color: #ffff;
     }
-    
-    .badgeContainer {
-        display: flex;
-        flex-wrap: wrap;
+}
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 50px;
+    @media only screen and (min-width: 320px) and (max-width: 425px) {
+        padding: 0;
     }
-    
-    .badgeButton {
-        margin-left: 5px;
-        cursor: pointer;
+    @media only screen and (min-width: 425px) and (max-width: 1023px) {
+        margin-left: 20%;
     }
+}
+
+.badgeContainer {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.badgeButton {
+    margin-left: 5px;
+    cursor: pointer;
+}
