--- a/ressources/styles/input.scss
+++ b/ressources/styles/input.scss
@@ -1,92 +1,93 @@
-                .searchbar {
-                    height: 58px;
-                    margin-left: 80px;
-                    margin-bottom: 20px;
-                    display: flex;
-                    align-items: center;
-                    justify-content: flex-start;
-                    @media only screen and (min-width: 320px) and (max-width: 425px) {
-                        margin: 0%;
-                    }
-                    &__input {
-                        border-top-left-radius: 5px;
-                        border-bottom-left-radius: 5px;
-                        width: 90%;
-                        border: none;
-                        height: 100%;
-                        background-color: #E7E7E7;
-                        font-size: large;
-                        font-weight: bold;
-                        padding-left: 20px;
-                    }
-                    &__button {
-                        display: inline-block;
-                        font-weight: 400;
-                        line-height: 1.5;
-                        color: #212529;
-                        text-align: center;
-                        text-decoration: none;
-                        vertical-align: middle;
-                        border: none;
-                        border-top-right-radius: 5px;
-                        border-bottom-right-radius: 5px;
-                        font-size: 2rem;
-                        background-color: #E7E7E7;
-                        cursor: pointer;
-                        transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-                        padding: 0.375rem 0.75rem;
-                    }
-                     ::placeholder {
-                        color: black;
-                    }
-                }
-                
-                .filter {
-                    position: relative;
-                    padding: 10px;
-                    margin: 10px;
-                    margin-left: 0px;
-                    border-radius: 5px;
-                    height: 50px;
-                    &-section {
-                        display: flex;
-                        margin-left: 13%;
-                        @media only screen and (min-width: 320px) and (max-width: 425px) {
-                            display: inline-table;
-                        }
-                    }
-                    &--blue {
-                        background-color: #3282F7;
-                        color: white;
-                        border: none;
-                    }
-                    &--green {
-                        background-color: #68D9A4;
-                        color: white;
-                        border: none;
-                    }
-                    &--orange {
-                        background-color: #ED6454;
-                        color: white;
-                        border: none;
-                    }
-                }
-                
-                .dropdown {
-                    border-radius: 5px;
-                    background-color: inherit;
-                    display: none;
-                    flex-direction: column;
-                    flex-wrap: wrap;
-                    padding: 5px;
-                    position: absolute;
-                    top: 45px;
-                    left: 0px;
-                    width: 100%;
-                    max-height: 400px;
-                    z-index: 8;
-                    &__item {
-                        margin-left: 5px;
-                        margin-bottom: 3px;
-                    }
-                }
+.searchbar {
+    height: 58px;
+    margin-left: 80px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    @media only screen and (min-width: 320px) and (max-width: 425px) {
+        margin: 0%;
+    }
+    &__input {
+        border-top-left-radius: 5px;
+        border-bottom-left-radius: 5px;
+        width: 90%;
+        border: none;
+        height: 100%;
+        background-color: #E7E7E7;
+        font-size: large;
+        font-weight: bold;
+        padding-left: 20px;
+    }
+    &__button {
+        display: inline-block;
+        font-weight: 400;
+        line-height: 1.5;
+        color: #212529;
+        text-align: center;
+        text-decoration: none;
+        vertical-align: middle;
+        border: none;
+        border-top-right-radius: 5px;
+        border-bottom-right-radius: 5px;
+        font-size: 2rem;
+        background-color: #E7E7E7;
+        cursor: pointer;
+        transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+        padding: 0.375rem 0.75rem;
+    }
+}
+
+.filter {
+    position: relative;
+    padding: 10px;
+    margin: 10px;
+    margin-left: 0px;
+    border-radius: 5px;
+    height: 50px;
+    color: #ffff;
+    &-section {
+        display: flex;
+        @media only screen and (min-width: 320px) and (max-width: 425px) {
+            display: inline-block;
+        }
+    }
+    &--blue {
+        background-color: #3282F7;
+        color: white;
+        border: none;
+    }
+    &--green {
+        background-color: #68D9A4;
+        color: white;
+        border: none;
+    }
+    &--orange {
+        background-color: #ED6454;
+        color: white;
+        border: none;
+    }
+     ::placeholder {
+        color: #ffff;
+        margin: 0;
+    }
+}
+
+.dropdown {
+    border-radius: 5px;
+    background-color: inherit;
+    display: none;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 5px;
+    position: absolute;
+    top: 45px;
+    left: 0px;
+    max-height: 400px;
+    z-index: 8;
+    align-content: flex-start;
+    &__item {
+        cursor: pointer;
+        margin: 4px
+    }
+}
