--- a/ressources/styles/reset.scss
+++ b/ressources/styles/reset.scss
@@ -8,10 +8,6 @@
             padding: 0;
         }
         @media only screen and (min-width: 425px) and (max-width: 1023px) {
-            margin-left: 30px;
+            padding: 30px;
         }
-    }
-    
-     ::placeholder {
-        color: white;
     }
