--- a/ressources/styles/style.css
+++ b/ressources/styles/style.css
@@ -16,12 +16,15 @@
 }
 .tag--blue {
   background-color: #3282F7;
+  color: #ffff;
 }
 .tag--green {
   background-color: #68D9A4;
+  color: #ffff;
 }
 .tag--orange {
   background-color: #ED6454;
+  color: #ffff;
 }
 
 .gallery {
@@ -29,6 +32,16 @@
   flex-wrap: wrap;
   justify-content: space-between;
   margin-top: 50px;
+}
+@media only screen and (min-width: 320px) and (max-width: 425px) {
+  .gallery {
+    padding: 0;
+  }
+}
+@media only screen and (min-width: 425px) and (max-width: 1023px) {
+  .gallery {
+    margin-left: 20%;
+  }
 }
 
 .badgeContainer {
@@ -82,9 +95,6 @@
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   padding: 0.375rem 0.75rem;
 }
-.searchbar ::placeholder {
-  color: black;
-}
 
 .filter {
   position: relative;
@@ -93,14 +103,14 @@
   margin-left: 0px;
   border-radius: 5px;
   height: 50px;
+  color: #ffff;
 }
 .filter-section {
   display: flex;
-  margin-left: 13%;
 }
 @media only screen and (min-width: 320px) and (max-width: 425px) {
   .filter-section {
-    display: inline-table;
+    display: inline-block;
   }
 }
 .filter--blue {
@@ -118,6 +128,10 @@
   color: white;
   border: none;
 }
+.filter ::placeholder {
+  color: #ffff;
+  margin: 0;
+}
 
 .dropdown {
   border-radius: 5px;
@@ -129,13 +143,13 @@
   position: absolute;
   top: 45px;
   left: 0px;
-  width: 100%;
   max-height: 400px;
   z-index: 8;
+  align-content: flex-start;
 }
 .dropdown__item {
-  margin-left: 5px;
-  margin-bottom: 3px;
+  cursor: pointer;
+  margin: 4px;
 }
 
 .card {
@@ -208,12 +222,8 @@ body {
 }
 @media only screen and (min-width: 425px) and (max-width: 1023px) {
   body {
-    margin-left: 30px;
+    padding: 30px;
   }
-}
-
-::placeholder {
-  color: white;
 }
 
 /*# sourceMappingURL=style.css.map */
