--- a/ressources/styles/homepage.scss
+++ b/ressources/styles/homepage.scss
@@ -32,6 +32,12 @@
     flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 50px;
+    @media only screen and (min-width: 320px) and (max-width: 425px) {
+        padding: 0;
+    }
+    @media only screen and (min-width: 425px) and (max-width: 1023px) {
+        margin-left: 20%;
+    }
 }
 
 .badgeContainer {
