--- a/ressources/styles/input.scss
+++ b/ressources/styles/input.scss
@@ -48,6 +48,9 @@
     color: #ffff;
     &-section {
         display: flex;
+        @media only screen and (min-width: 320px) and (max-width: 425px) {
+            display: inline-block;
+        }
     }
     &--blue {
         background-color: #3282F7;
@@ -85,6 +88,6 @@
     align-content: flex-start;
     &__item {
         cursor: pointer;
-        margin: 5px
+        margin: 4px
     }
 }
