--- a/ressources/styles/style.css
+++ b/ressources/styles/style.css
@@ -33,6 +33,16 @@
   justify-content: space-between;
   margin-top: 50px;
 }
+@media only screen and (min-width: 320px) and (max-width: 425px) {
+  .gallery {
+    padding: 0;
+  }
+}
+@media only screen and (min-width: 425px) and (max-width: 1023px) {
+  .gallery {
+    margin-left: 20%;
+  }
+}
 
 .badgeContainer {
   display: flex;
@@ -98,6 +108,11 @@
 .filter-section {
   display: flex;
 }
+@media only screen and (min-width: 320px) and (max-width: 425px) {
+  .filter-section {
+    display: inline-block;
+  }
+}
 .filter--blue {
   background-color: #3282F7;
   color: white;
@@ -134,7 +149,7 @@
 }
 .dropdown__item {
   cursor: pointer;
-  margin: 5px;
+  margin: 4px;
 }
 
 .card {
@@ -195,6 +210,20 @@
 
 p {
   margin: 0;
+}
+
+body {
+  padding: 100px;
+}
+@media only screen and (min-width: 320px) and (max-width: 425px) {
+  body {
+    padding: 0;
+  }
+}
+@media only screen and (min-width: 425px) and (max-width: 1023px) {
+  body {
+    padding: 30px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
